--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body {
     background: linear-gradient(to right, #7b1fa2, #e040fb);
     font-family: 'Arial', sans-serif;
     color: #ffffff;
+    overflow: hidden;
 }
 
 .container {
@@ -32,22 +33,40 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    font-size: 4em;
-    padding: 20px;
+    font-size: 3em;
+    padding: 0 0 20px 0;
 }
 
 .time {
-    font-size: 10em;
+    font-size: 7em;
     font-weight: bold;
-    margin: 20px 0;
+}
+
+.qa-container {
+    margin: 0 20px 20px 20px;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 30px;
+    border: 3px solid #ffffff;
+    flex-grow: 1;
+}
+
+.question {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.answer {
+    font-size: 1.25em;
 }
 
 .bottom-bar {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    font-size: 4em;
-    padding: 20px;
+    font-size: 3em;
+    padding: 0;
 }
 
 .week {
