--- a/styles.css
+++ b/styles.css
@@ -29,21 +29,45 @@ body {
     justify-content: space-between;
 }
 
-.top-bar {
+.top-bar, .bottom-bar {
     display: flex;
     justify-content: space-between;
     width: 100%;
     font-size: 3em;
-    padding: 0 0 20px 0;
+}
+
+.top-bar {
+    padding-bottom: 20px; /* Adds space below the top bar */
+}
+
+.bottom-bar {
+    display: flex;
+    justify-content: space-between;
+    position: relative; /* Add this line */
+    width: 100%;
+    font-size: 3em;
+    padding-top: 20px; /* Adds space above the bottom bar */
+}
+
+.week {
+    display: flex;
+    align-items: center;
+}
+
+#currentBinaryWeek { /* centered */
+    position: absolute; 
+    left: 50%; 
+    transform: translateX(-50%);
 }
 
 .time {
-    font-size: 7em;
+    font-size: 10em;
     font-weight: bold;
+    margin: 20px 0; /* Adds space above and below the time element */
 }
 
 .qa-container {
-    margin: 0 20px 20px 20px;
+    margin: 20px;
     padding: 20px;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 30px;
@@ -52,29 +76,16 @@ body {
 }
 
 .question {
-    font-size: 1.5em;
-    margin-bottom: 20px;
+    font-size: 3em;
+    margin-bottom: 20px; /* Space below each question */
     font-weight: bold;
 }
 
 .answer {
-    font-size: 1.25em;
+    font-size: 3.5em;
+    margin-bottom: 20px; /* Space below each answer */
 }
 
-.bottom-bar {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    font-size: 3em;
-    padding: 0;
-}
-
-.week {
-    display: flex;
-    align-items: baseline;
-}
-
-.subscript {
+sub {
     font-size: 0.5em;
-    vertical-align: sub;
 }
