--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to right, #7b1fa2, #e040fb);
+    background: linear-gradient(to right, #703d77, #a058ab);
     font-family: 'Arial', sans-serif;
     color: #ffffff;
     overflow: hidden;
@@ -20,7 +20,7 @@ body {
     padding: 40px;
     border: 5px solid #ffffff;
     border-radius: 25px;
-    background: rgba(0, 0, 0, 0.5);
+    background-color: #59315f;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.5);
     width: 90%;
     height: 90%;
@@ -43,7 +43,7 @@ body {
 .bottom-bar {
     display: flex;
     justify-content: space-between;
-    position: relative; /* Add this line */
+    position: relative; 
     width: 100%;
     font-size: 3em;
     padding-top: 20px; /* Adds space above the bottom bar */
